--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/native": "^5.7.1",
-    "expo": "~38.0.7",
-    "expo-splash-screen": "~0.4.0",
+    "@react-navigation/stack": "^5.7.1",
+    "expo": "^38.0.0",
+    "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.10.1",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
+    "expo-updates": "~0.2.8",
+    "popup-ui": "^1.1.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-modals": "^0.19.9",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
